Fix some checkstyle.